@@ -85,6 +85,7 @@ import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.commons.lang3.RandomUtils;
 import org.apache.http.HttpStatus;
 import org.assertj.core.api.recursive.comparison.RecursiveComparisonConfiguration;
+import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -167,6 +168,7 @@ import static com.github.tomakehurst.wiremock.client.WireMock.post;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
 import static java.util.UUID.randomUUID;
 import static java.util.function.Predicate.not;
+import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.toMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
@@ -4487,10 +4489,12 @@ class TracesResourceTest {
                     .stream()
                     .flatMap(filter -> filter.getValue()
                             .stream()
-                            .map(operator -> Arguments.of(filter.getKey(), operator, getValidValue(filter.getKey()))));
+                            .flatMap(operator -> Stream.of(
+                                    Arguments.of(true, filter.getKey(), operator, getValidValue(filter.getKey())),
+                                    Arguments.of(false, filter.getKey(), operator, getValidValue(filter.getKey())))));
         }
 
-        private Stream<TraceThreadFilter> getFilterInvalidValueOrKeyForFieldTypeArgs() {
+        private Stream<Arguments> getFilterInvalidValueOrKeyForFieldTypeArgs() {
             return filterQueryBuilder.getSupportedOperators(TraceThreadField.values())
                     .entrySet()
                     .stream()
@@ -4518,7 +4522,10 @@ class TracesResourceTest {
                                         .operator(operator)
                                         .value(getInvalidValue(filter.getKey()))
                                         .build());
-                            }));
+                            }))
+                    .flatMap(operator -> Stream.of(
+                            Arguments.of(true, operator),
+                            Arguments.of(false, operator)));
         }
 
         private Stream<Arguments> getValidFilters() {
@@ -4592,7 +4599,10 @@ class TracesResourceTest {
                                     .map(trace -> trace.toBuilder()
                                             .threadId(UUID.randomUUID().toString())
                                             .build())
-                                    .toList()));
+                                    .toList()))
+                    .flatMap(args -> Stream.of(
+                            Arguments.of(true, args.get()[0], args.get()[1], args.get()[2]),
+                            Arguments.of(false, args.get()[0], args.get()[1], args.get()[2])));
         }
 
         @ParameterizedTest
@@ -4655,7 +4665,8 @@ class TracesResourceTest {
 
         @ParameterizedTest
         @MethodSource("getUnsupportedOperations")
-        void whenFilterUnsupportedOperation__thenReturn400(TraceThreadField field, Operator operator, String value) {
+        void whenFilterUnsupportedOperation__thenReturn400(boolean stream, TraceThreadField field, Operator operator,
+                String value) {
             var filter = TraceThreadFilter.builder()
                     .field(field)
                     .operator(operator)
@@ -4673,24 +4684,25 @@ class TracesResourceTest {
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             var filters = List.of(filter);
 
-            var actualResponse = client.target(URL_TEMPLATE.formatted(baseURI))
-                    .path("threads")
-                    .queryParam("project_name", projectName)
-                    .queryParam("filters", toURLEncodedQueryParam(filters))
-                    .request()
-                    .header(HttpHeaders.AUTHORIZATION, API_KEY)
-                    .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .get();
+            try (var actualResponse = !stream
+                    ? findThreads(projectName, filters, API_KEY, TEST_WORKSPACE)
+                    : streamThreadSearch(projectName, null, filters, API_KEY, TEST_WORKSPACE)) {
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
 
-            var actualError = actualResponse.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
-            assertThat(actualError).isEqualTo(expectedError);
+                var actualError = actualResponse.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
+                assertThat(actualError).isEqualTo(expectedError);
+            }
+        }
+
+        private Response findThreads(String projectName, List<@NotNull TraceThreadFilter> filters, String apiKey,
+                String testWorkspace) {
+            return traceResourceClient.getTraceThreads(projectName, apiKey, testWorkspace, filters);
         }
 
         @ParameterizedTest
         @MethodSource("getFilterInvalidValueOrKeyForFieldTypeArgs")
-        void whenFilterInvalidValueOrKeyForFieldType__thenReturn400(TraceThreadFilter filter) {
+        void whenFilterInvalidValueOrKeyForFieldType__thenReturn400(boolean stream, TraceThreadFilter filter) {
             var expectedError = new io.dropwizard.jersey.errors.ErrorMessage(
                     400,
                     "Invalid value '%s' or key '%s' for field '%s' of type '%s'".formatted(
@@ -4701,24 +4713,28 @@ class TracesResourceTest {
 
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             var filters = List.of(filter);
-            var actualResponse = client.target(URL_TEMPLATE.formatted(baseURI))
-                    .path("threads")
-                    .queryParam("project_name", projectName)
-                    .queryParam("filters", toURLEncodedQueryParam(filters))
-                    .request()
-                    .header(HttpHeaders.AUTHORIZATION, API_KEY)
-                    .header(WORKSPACE_HEADER, TEST_WORKSPACE)
-                    .get();
 
-            assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
+            try (var actualResponse = !stream
+                    ? findThreads(projectName, filters, API_KEY, TEST_WORKSPACE)
+                    : streamThreadSearch(projectName, null, filters, API_KEY, TEST_WORKSPACE)) {
 
-            var actualError = actualResponse.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
-            assertThat(actualError).isEqualTo(expectedError);
+                assertThat(actualResponse.getStatusInfo().getStatusCode()).isEqualTo(HttpStatus.SC_BAD_REQUEST);
+
+                var actualError = actualResponse.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
+                assertThat(actualError).isEqualTo(expectedError);
+            }
+        }
+
+        private Response streamThreadSearch(String projectName, UUID projectId,
+                List<@NotNull TraceThreadFilter> filters, String apiKey, String testWorkspace) {
+            return traceResourceClient.callSearchTraceThreadStream(projectName, projectId, apiKey, testWorkspace,
+                    filters);
         }
 
         @ParameterizedTest
         @MethodSource("getValidFilters")
         void whenFilterThreads__thenReturnThreadsFiltered(
+                boolean stream,
                 Function<List<Trace>, TraceThreadFilter> getFilter,
                 Function<List<Trace>, List<Trace>> getExpectedThreads,
                 Function<List<Trace>, List<Trace>> getUnexpectedThreads) {
@@ -4763,21 +4779,26 @@ class TracesResourceTest {
 
             var filter = getFilter.apply(expectedTraces);
 
-            assertThreadPage(projectName, null, expectedThreads, List.of(filter), Map.of(), API_KEY, TEST_WORKSPACE);
+            if (!stream) {
+                assertThreadPage(projectName, null, expectedThreads, List.of(filter), Map.of(), API_KEY,
+                        TEST_WORKSPACE);
+            } else {
+                assertTheadStream(projectName, null, API_KEY, TEST_WORKSPACE, expectedThreads, List.of(filter));
+            }
         }
 
         private Stream<Arguments> getStatusFilterTestArguments() {
             return Stream.of(
-                    // When filtering by ACTIVE status, should return only active threads
-                    Arguments.of(TraceThreadStatus.ACTIVE, false),
-                    // When filtering by INACTIVE status, should return only inactive threads
-                    Arguments.of(TraceThreadStatus.INACTIVE, true));
+                    Arguments.of(true, TraceThreadStatus.ACTIVE, false),
+                    Arguments.of(true, TraceThreadStatus.INACTIVE, true),
+                    Arguments.of(false, TraceThreadStatus.ACTIVE, false),
+                    Arguments.of(false, TraceThreadStatus.INACTIVE, true));
         }
 
         @ParameterizedTest
         @MethodSource("getStatusFilterTestArguments")
         @DisplayName("When filtering by thread status, should return only threads with matching status")
-        void whenFilterByStatus__thenReturnThreadsWithMatchingStatus(TraceThreadStatus filterStatus,
+        void whenFilterByStatus__thenReturnThreadsWithMatchingStatus(boolean stream, TraceThreadStatus filterStatus,
                 boolean shouldCloseThread) {
 
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
@@ -4807,6 +4828,7 @@ class TracesResourceTest {
 
             // Close the thread if needed to set its status to INACTIVE
             if (shouldCloseThread) {
+                Mono.delay(Duration.ofMillis(500)).block();
                 traceResourceClient.closeTraceThread(threadId, null, projectName, apiKey, workspaceName);
             }
 
@@ -4816,6 +4838,7 @@ class TracesResourceTest {
             TraceThreadStatus expectedStatus = shouldCloseThread
                     ? TraceThreadStatus.INACTIVE
                     : TraceThreadStatus.ACTIVE;
+
             List<TraceThread> expectedThreads = getExpectedThreads(traces, projectId, threadId, List.of(),
                     expectedStatus);
 
@@ -4826,8 +4849,21 @@ class TracesResourceTest {
                     .value(filterStatus.getValue())
                     .build();
 
-            assertThreadPage(projectName, null, expectedThreads, List.of(statusFilter), Map.of(), apiKey,
-                    workspaceName);
+            if (!stream) {
+                // When not streaming, assert the thread page with the status filter
+                assertThreadPage(null, projectId, expectedThreads, List.of(statusFilter), Map.of(), apiKey,
+                        workspaceName);
+            } else {
+                // When streaming, assert the threads with the status filter
+                assertTheadStream(null, projectId, apiKey, workspaceName, expectedThreads, List.of(statusFilter));
+            }
+        }
+
+        private void assertTheadStream(String projectName, UUID projectId, String apiKey, String workspaceName,
+                List<TraceThread> expectedThreads, List<TraceThreadFilter> filters) {
+            var actualThreads = traceResourceClient.searchTraceThreadsStream(projectName, projectId, apiKey,
+                    workspaceName, filters);
+            TraceAssertions.assertThreads(expectedThreads, actualThreads);
         }
 
         @ParameterizedTest
@@ -4837,14 +4873,16 @@ class TracesResourceTest {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
-            mockTargetWorkspace(API_KEY, workspaceName, workspaceId);
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             var project = factory.manufacturePojo(Project.class).toBuilder()
                     .name(projectName)
                     .build();
 
-            UUID projectId = projectResourceClient.createProject(project, API_KEY, workspaceName);
+            UUID projectId = projectResourceClient.createProject(project, apiKey, workspaceName);
 
             // Create threads with different feedback scores
             var threadId1 = UUID.randomUUID().toString();
@@ -4873,35 +4911,29 @@ class TracesResourceTest {
                     .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
                     .build();
 
-            traceResourceClient.batchCreateTraces(List.of(trace1, trace2, trace3), API_KEY, workspaceName);
+            traceResourceClient.batchCreateTraces(List.of(trace1, trace2, trace3), apiKey, workspaceName);
+
+            // Ensure traces are created with a delay
+            Mono.delay(Duration.ofMillis(500)).block();
+
+            // Close the threads to set their status to INACTIVE
+            traceResourceClient.closeTraceThread(threadId1, null, projectName, apiKey, workspaceName);
+            traceResourceClient.closeTraceThread(threadId2, null, projectName, apiKey, workspaceName);
+            traceResourceClient.closeTraceThread(threadId3, null, projectName, apiKey, workspaceName);
 
             // Add feedback scores with different values
             String scoreName = RandomStringUtils.secure().nextAlphanumeric(10);
-            var scoreItems = List.of(
-                    FeedbackScoreBatchItem.builder()
-                            .threadId(threadId1)
+
+            var scoreItems = Stream.of(threadId1, threadId2, threadId3)
+                    .map(threadId -> factory.manufacturePojo(FeedbackScoreBatchItem.class).toBuilder()
+                            .threadId(threadId)
                             .projectName(projectName)
                             .name(scoreName)
-                            .value(factory.manufacturePojo(BigDecimal.class)) // Random score
-                            .source(ScoreSource.SDK)
-                            .build(),
-                    FeedbackScoreBatchItem.builder()
-                            .threadId(threadId2)
-                            .projectName(projectName)
-                            .name(scoreName)
-                            .value(factory.manufacturePojo(BigDecimal.class)) // Random score
-                            .source(ScoreSource.SDK)
-                            .build(),
-                    FeedbackScoreBatchItem.builder()
-                            .threadId(threadId3)
-                            .projectName(projectName)
-                            .name(scoreName)
-                            .value(factory.manufacturePojo(BigDecimal.class)) // Random score -
-                            .source(ScoreSource.SDK)
-                            .build());
+                            .build())
+                    .toList();
 
             Instant now = Instant.now();
-            traceResourceClient.threadFeedbackScores(scoreItems, API_KEY, workspaceName);
+            traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
 
             // Create feedback scores for expected threads
             var feedbackScores = scoreItems.stream()
@@ -4911,11 +4943,11 @@ class TracesResourceTest {
 
             // Create expected threads in the correct order based on direction
             List<TraceThread> expectedThreads = Stream.of(
-                    getExpectedThreads(List.of(trace1), projectId, threadId1, List.of(), TraceThreadStatus.ACTIVE,
+                    getExpectedThreads(List.of(trace1), projectId, threadId1, List.of(), TraceThreadStatus.INACTIVE,
                             feedbackScores.get(threadId1)).getFirst(),
-                    getExpectedThreads(List.of(trace2), projectId, threadId2, List.of(), TraceThreadStatus.ACTIVE,
+                    getExpectedThreads(List.of(trace2), projectId, threadId2, List.of(), TraceThreadStatus.INACTIVE,
                             feedbackScores.get(threadId2)).getFirst(),
-                    getExpectedThreads(List.of(trace3), projectId, threadId3, List.of(), TraceThreadStatus.ACTIVE,
+                    getExpectedThreads(List.of(trace3), projectId, threadId3, List.of(), TraceThreadStatus.INACTIVE,
                             feedbackScores.get(threadId3)).getFirst())
                     .sorted(Comparator.comparing(thread -> {
                         var score = feedbackScores.get(thread.id()).stream()
@@ -4933,7 +4965,7 @@ class TracesResourceTest {
                             .direction(direction)
                             .build());
 
-            assertThreadPage(projectName, null, expectedThreads, List.of(), Map.of(), API_KEY, workspaceName,
+            assertThreadPage(projectName, null, expectedThreads, List.of(), Map.of(), apiKey, workspaceName,
                     sortingFields);
         }
 
@@ -5831,14 +5863,16 @@ class TracesResourceTest {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
-            mockTargetWorkspace(API_KEY, workspaceName, workspaceId);
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
             var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
             var project = factory.manufacturePojo(Project.class).toBuilder()
                     .name(projectName)
                     .build();
 
-            UUID projectId = projectResourceClient.createProject(project, API_KEY, workspaceName);
+            UUID projectId = projectResourceClient.createProject(project, apiKey, workspaceName);
 
             var threadId1 = UUID.randomUUID().toString();
             var threadId2 = UUID.randomUUID().toString();
@@ -5846,7 +5880,7 @@ class TracesResourceTest {
             // Create traces with threads first (threads need traces to exist)
             Trace trace1 = createTrace().toBuilder()
                     .threadId(threadId1)
-                    .projectId(projectId)
+                    .projectId(null)
                     .projectName(projectName)
                     .startTime(Instant.now().minusSeconds(5))
                     .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
@@ -5854,20 +5888,24 @@ class TracesResourceTest {
 
             Trace trace2 = createTrace().toBuilder()
                     .threadId(threadId2)
-                    .projectId(projectId)
+                    .projectId(null)
                     .projectName(projectName)
                     .startTime(Instant.now().minusSeconds(2))
                     .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
                     .build();
 
-            traceResourceClient.batchCreateTraces(List.of(trace1, trace2), API_KEY, workspaceName);
+            traceResourceClient.batchCreateTraces(List.of(trace1, trace2), apiKey, workspaceName);
+
+            // Close thread
+            Mono.delay(Duration.ofMillis(500)).block();
+            traceResourceClient.closeTraceThread(threadId1, null, projectName, apiKey, workspaceName);
+            traceResourceClient.closeTraceThread(threadId2, null, projectName, apiKey, workspaceName);
 
             var scoreItems = PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
                     .map(item -> item.toBuilder()
                             .threadId(threadId1)
                             .projectName(projectName)
                             .projectId(null) // Project ID is not required for thread scores
-                            .source(ScoreSource.SDK)
                             .build())
                     .collect(Collectors.toList());
 
@@ -5912,17 +5950,17 @@ class TracesResourceTest {
                     createExpectedFeedbackScore(scoreItems.get(3), now));
 
             // When
-            traceResourceClient.threadFeedbackScores(scoreItems, API_KEY, workspaceName);
+            traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
 
             // Then - Get threads using getTraceThreads API
-            var traceThreadPage = traceResourceClient.getTraceThreads(projectId, projectName, API_KEY, workspaceName,
+            var traceThreadPage = traceResourceClient.getTraceThreads(projectId, null, apiKey, workspaceName,
                     List.of(), List.of(), Map.of());
 
             // Create expected threads using helper method with actual traces
             var expectedThread1 = getExpectedThreads(List.of(trace1), projectId, threadId1, List.of(),
-                    TraceThreadStatus.ACTIVE, expectedScores1).getFirst();
+                    TraceThreadStatus.INACTIVE, expectedScores1).getFirst();
             var expectedThread2 = getExpectedThreads(List.of(trace2), projectId, threadId2, List.of(),
-                    TraceThreadStatus.ACTIVE, expectedScores2).getFirst();
+                    TraceThreadStatus.INACTIVE, expectedScores2).getFirst();
 
             var expectedThreads = List.of(expectedThread2, expectedThread1);
 
@@ -5933,15 +5971,49 @@ class TracesResourceTest {
         @ParameterizedTest
         @MethodSource("threadFeedbackScoreTestCases")
         @DisplayName("Thread feedback scores contract test")
-        void threadFeedbackScores_contractTest(List<FeedbackScoreBatchItem> scores, int expectedStatus,
+        void scoreBatchOfThreads_contractTest(List<FeedbackScoreBatchItem> scores, int expectedStatus,
                 String expectedError) {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
-            mockTargetWorkspace(API_KEY, workspaceName, workspaceId);
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            if (expectedStatus == HttpStatus.SC_NO_CONTENT) {
+
+                Map<String, List<FeedbackScoreBatchItem>> scoresByProjectName = scores.stream()
+                        .collect(groupingBy(FeedbackScoreBatchItem::projectName));
+
+                scoresByProjectName.forEach((projectName, projectScores) -> {
+                    projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+                    // Create traces with threads first (threads need traces to exist)
+                    List<Trace> traces = projectScores.stream()
+                            .map(item -> createTrace().toBuilder()
+                                    .threadId(item.threadId())
+                                    .projectId(null)
+                                    .projectName(projectName)
+                                    .startTime(Instant.now().minusSeconds(5))
+                                    .lastUpdatedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
+                                    .build())
+                            .toList();
+
+                    traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
+                });
+
+                Mono.delay(Duration.ofMillis(500)).block();
+
+                // Close threads
+                scoresByProjectName.forEach((projectName, projectScores) -> {
+                    projectScores.forEach(item -> {
+                        traceResourceClient.closeTraceThread(item.threadId(), null, projectName, apiKey, workspaceName);
+                    });
+                });
+            }
 
             // When
-            try (var response = traceResourceClient.callThreadFeedbackScores(scores, API_KEY, workspaceName)) {
+            try (var response = traceResourceClient.callThreadFeedbackScores(scores, apiKey, workspaceName)) {
                 // Then
                 assertThat(response.getStatus()).isEqualTo(expectedStatus);
                 if (expectedStatus == HttpStatus.SC_NO_CONTENT) {
@@ -5950,6 +6022,94 @@ class TracesResourceTest {
                     assertThat(response.readEntity(ErrorMessage.class).errors()).contains(expectedError);
                 }
             }
+        }
+
+        @Test
+        @DisplayName("When scoring batch of threads with threads that are open, then return 409")
+        void scoreBatchOfThreads_withThreadsAreOpen_thenReturns409() {
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            List<FeedbackScoreBatchItem> scores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(UUID.randomUUID().toString())
+                            .projectName(projectName)
+                            .projectId(null) // Project ID is not required for thread scores
+                            .source(ScoreSource.SDK)
+                            .build())
+                    .toList();
+
+            List<Trace> traces = scores.stream()
+                    .map(item -> createTrace().toBuilder()
+                            .threadId(item.threadId())
+                            .projectId(null)
+                            .projectName(projectName)
+                            .build())
+                    .toList();
+
+            traceResourceClient.batchCreateTraces(traces, apiKey, workspaceName);
+
+            // When
+            try (var response = traceResourceClient.callThreadFeedbackScores(scores, apiKey, workspaceName)) {
+
+                // Then
+                assertOpenThreadScoreConflict(scores, response);
+            }
+        }
+
+        @Test
+        @DisplayName("When scoring batch of threads with threads that dont exist, then return 409")
+        void scoreBatchOfThreads_withThreadsDontExist_thenReturns409() {
+            // Given
+            var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
+            var workspaceId = UUID.randomUUID().toString();
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
+
+            var projectName = RandomStringUtils.secure().nextAlphanumeric(10);
+            projectResourceClient.createProject(projectName, apiKey, workspaceName);
+
+            List<FeedbackScoreBatchItem> scores = PodamFactoryUtils
+                    .manufacturePojoList(factory, FeedbackScoreBatchItem.class).stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(UUID.randomUUID().toString())
+                            .projectName(projectName)
+                            .projectId(null) // Project ID is not required for thread scores
+                            .source(ScoreSource.SDK)
+                            .build())
+                    .toList();
+
+            // When
+            try (var response = traceResourceClient.callThreadFeedbackScores(scores, apiKey, workspaceName)) {
+
+                // Then
+                assertOpenThreadScoreConflict(scores, response);
+            }
+        }
+
+        private static void assertOpenThreadScoreConflict(List<FeedbackScoreBatchItem> scores, Response response) {
+            String threadIds = scores.stream()
+                    .map(FeedbackScoreBatchItem::threadId)
+                    .sorted()
+                    .collect(Collectors.joining(", "));
+
+            assertThat(response.getStatus()).isEqualTo(HttpStatus.SC_CONFLICT);
+            assertThat(response.hasEntity()).isTrue();
+
+            var errorMessage = response.readEntity(io.dropwizard.jersey.errors.ErrorMessage.class);
+            assertThat(errorMessage.getCode()).isEqualTo(HttpStatus.SC_CONFLICT);
+            assertThat(errorMessage.getMessage())
+                    .isEqualTo("Threads must be closed before scoring. Thread IDs are active: '[%s]'"
+                            .formatted(threadIds));
         }
 
         Stream<Arguments> threadFeedbackScoreTestCases() {
@@ -6090,39 +6250,27 @@ class TracesResourceTest {
 
             traceResourceClient.batchCreateTraces(List.of(trace), apiKey, workspaceName);
 
-            var scoreItems = PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class);
+            // Close thread
+            Mono.delay(Duration.ofMillis(500)).block();
+            traceResourceClient.closeTraceThread(threadId, null, projectName, apiKey, workspaceName);
 
-            String score1 = RandomStringUtils.secure().nextAlphanumeric(10);
-            String score2 = RandomStringUtils.secure().nextAlphanumeric(10);
-            String score3 = RandomStringUtils.secure().nextAlphanumeric(10);
-
-            scoreItems.set(0, scoreItems.get(0).toBuilder()
-                    .threadId(threadId)
-                    .projectName(projectName)
-                    .projectId(null)
-                    .name(score1)
-                    .build());
-
-            scoreItems.set(1, scoreItems.get(1).toBuilder()
-                    .threadId(threadId)
-                    .projectName(projectName)
-                    .projectId(null)
-                    .name(score2)
-                    .build());
-
-            scoreItems.set(2, scoreItems.get(2).toBuilder()
-                    .threadId(threadId)
-                    .projectName(projectName)
-                    .projectId(null)
-                    .name(score3)
-                    .build());
+            var scoreItems = PodamFactoryUtils.manufacturePojoList(factory, FeedbackScoreBatchItem.class)
+                    .stream()
+                    .map(item -> item.toBuilder()
+                            .threadId(threadId)
+                            .projectName(projectName)
+                            .projectId(null)
+                            .build())
+                    .toList();
 
             // Create expected thread with initial scores
             Instant now = Instant.now();
             var expectedInitialScores = List.of(
                     createExpectedFeedbackScore(scoreItems.get(0), now),
                     createExpectedFeedbackScore(scoreItems.get(1), now),
-                    createExpectedFeedbackScore(scoreItems.get(2), now));
+                    createExpectedFeedbackScore(scoreItems.get(2), now),
+                    createExpectedFeedbackScore(scoreItems.get(3), now),
+                    createExpectedFeedbackScore(scoreItems.get(4), now));
 
             // When
             traceResourceClient.threadFeedbackScores(scoreItems, apiKey, workspaceName);
@@ -6132,11 +6280,12 @@ class TracesResourceTest {
                     List.of(), List.of(), Map.of());
 
             var expectedInitialThread = getExpectedThreads(List.of(trace), projectId, threadId, List.of(),
-                    TraceThreadStatus.ACTIVE, expectedInitialScores).get(0);
+                    TraceThreadStatus.INACTIVE, expectedInitialScores).getFirst();
 
             TraceAssertions.assertThreads(List.of(expectedInitialThread), initialThreadPage.content());
 
-            Set<String> scoresToDelete = Set.of(score1, score2);
+            Set<String> scoresToDelete = Set.of(scoreItems.getFirst().name(), scoreItems.get(1).name(),
+                    scoreItems.get(3).name(), scoreItems.getLast().name());
 
             // And When
             traceResourceClient.deleteThreadFeedbackScores(projectName, threadId, scoresToDelete, apiKey,
@@ -6151,7 +6300,7 @@ class TracesResourceTest {
                     createExpectedFeedbackScore(scoreItems.get(2), now));
 
             var expectedRemainingThread = getExpectedThreads(List.of(trace), projectId, threadId, List.of(),
-                    TraceThreadStatus.ACTIVE, expectedRemainingScores).get(0);
+                    TraceThreadStatus.INACTIVE, expectedRemainingScores).getFirst();
 
             TraceAssertions.assertThreads(List.of(expectedRemainingThread), remainingThreadPage.content());
         }
@@ -6164,11 +6313,13 @@ class TracesResourceTest {
             // Given
             var workspaceName = RandomStringUtils.secure().nextAlphanumeric(10);
             var workspaceId = UUID.randomUUID().toString();
-            mockTargetWorkspace(API_KEY, workspaceName, workspaceId);
+            var apiKey = UUID.randomUUID().toString();
+
+            mockTargetWorkspace(apiKey, workspaceName, workspaceId);
 
             // When
             try (var response = traceResourceClient.callDeleteThreadFeedbackScores(projectName, threadId, scoreNames,
-                    API_KEY, workspaceName)) {
+                    apiKey, workspaceName)) {
                 // Then
                 assertThat(response.getStatus()).isEqualTo(expectedStatus);
 
